#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(squeezeplay-decoder, 0.0.1, pyk@pyk.fr)
AM_INIT_AUTOMAKE(squeezeplay-decoder, 0.0.1)
AC_CONFIG_SRCDIR([src/decoder.c])
AC_CONFIG_HEADERS([config.h])
AC_CHECK_HEADERS([arpa/inet.h])
AC_CHECK_HEADERS([netdb.h])
AC_CHECK_HEADERS([netinet/in.h])
AC_CHECK_HEADERS([sys/socket.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([inttypes.h stddef.h stdlib.h string.h pthread.h dlfcn.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([memset strtok pthread_rwlock_init])
AC_CHECK_FUNCS([gethostbyname])
AC_CHECK_FUNCS([socket])
AC_CHECK_FUNCS([dlsym])

AC_OUTPUT(Makefile src/Makefile)